cdk.out/assembly-pipeline-stack-dev/pipelinestackdevdevblueprint82F6F6D4.template.json
{
 "Description": "Blueprints tracking (qs-1s1r465hk)",
 "Resources": {
  "devblueprintvpc747DC411": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/Resource"
   }
  },
  "devblueprintvpcPublicSubnet1Subnet289CF21E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    },
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet1/Subnet"
   }
  },
  "devblueprintvpcPublicSubnet1RouteTableCD4DCFF6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet1/RouteTable"
   }
  },
  "devblueprintvpcPublicSubnet1RouteTableAssociation1DE8BABD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "devblueprintvpcPublicSubnet1RouteTableCD4DCFF6"
    },
    "SubnetId": {
     "Ref": "devblueprintvpcPublicSubnet1Subnet289CF21E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "devblueprintvpcPublicSubnet1DefaultRouteD3EE809D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "devblueprintvpcPublicSubnet1RouteTableCD4DCFF6"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "devblueprintvpcIGW8CC1724C"
    }
   },
   "DependsOn": [
    "devblueprintvpcVPCGW41D7F671"
   ],
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "devblueprintvpcPublicSubnet1EIP660BDE5C": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet1/EIP"
   }
  },
  "devblueprintvpcPublicSubnet1NATGateway27A4838E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "devblueprintvpcPublicSubnet1Subnet289CF21E"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "devblueprintvpcPublicSubnet1EIP660BDE5C",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet1/NATGateway"
   }
  },
  "devblueprintvpcPublicSubnet2Subnet6899B731": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    },
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet2/Subnet"
   }
  },
  "devblueprintvpcPublicSubnet2RouteTable1DA02E0D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet2/RouteTable"
   }
  },
  "devblueprintvpcPublicSubnet2RouteTableAssociationBCFF690D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "devblueprintvpcPublicSubnet2RouteTable1DA02E0D"
    },
    "SubnetId": {
     "Ref": "devblueprintvpcPublicSubnet2Subnet6899B731"
    }
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "devblueprintvpcPublicSubnet2DefaultRoute14B45FB4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "devblueprintvpcPublicSubnet2RouteTable1DA02E0D"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "devblueprintvpcIGW8CC1724C"
    }
   },
   "DependsOn": [
    "devblueprintvpcVPCGW41D7F671"
   ],
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "devblueprintvpcPublicSubnet2EIP4E6B0CF5": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet2/EIP"
   }
  },
  "devblueprintvpcPublicSubnet2NATGateway357FD4F4": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "devblueprintvpcPublicSubnet2Subnet6899B731"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "devblueprintvpcPublicSubnet2EIP4E6B0CF5",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet2/NATGateway"
   }
  },
  "devblueprintvpcPublicSubnet3Subnet953ED559": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    },
    "AvailabilityZone": "us-west-2c",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet3/Subnet"
   }
  },
  "devblueprintvpcPublicSubnet3RouteTableC6FE1F2F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet3/RouteTable"
   }
  },
  "devblueprintvpcPublicSubnet3RouteTableAssociation903D92F3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "devblueprintvpcPublicSubnet3RouteTableC6FE1F2F"
    },
    "SubnetId": {
     "Ref": "devblueprintvpcPublicSubnet3Subnet953ED559"
    }
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet3/RouteTableAssociation"
   }
  },
  "devblueprintvpcPublicSubnet3DefaultRoute62EFDD3F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "devblueprintvpcPublicSubnet3RouteTableC6FE1F2F"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "devblueprintvpcIGW8CC1724C"
    }
   },
   "DependsOn": [
    "devblueprintvpcVPCGW41D7F671"
   ],
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet3/DefaultRoute"
   }
  },
  "devblueprintvpcPublicSubnet3EIP56A329E3": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet3/EIP"
   }
  },
  "devblueprintvpcPublicSubnet3NATGateway7FD4981B": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "devblueprintvpcPublicSubnet3Subnet953ED559"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "devblueprintvpcPublicSubnet3EIP56A329E3",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PublicSubnet3/NATGateway"
   }
  },
  "devblueprintvpcPrivateSubnet1Subnet87E8AFB4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    },
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet1/Subnet"
   }
  },
  "devblueprintvpcPrivateSubnet1RouteTable58E1DC0F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet1/RouteTable"
   }
  },
  "devblueprintvpcPrivateSubnet1RouteTableAssociation7B079A13": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "devblueprintvpcPrivateSubnet1RouteTable58E1DC0F"
    },
    "SubnetId": {
     "Ref": "devblueprintvpcPrivateSubnet1Subnet87E8AFB4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "devblueprintvpcPrivateSubnet1DefaultRouteD7281F01": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "devblueprintvpcPrivateSubnet1RouteTable58E1DC0F"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "devblueprintvpcPublicSubnet1NATGateway27A4838E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "devblueprintvpcPrivateSubnet2Subnet260858B5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    },
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet2/Subnet"
   }
  },
  "devblueprintvpcPrivateSubnet2RouteTableF6860A55": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet2/RouteTable"
   }
  },
  "devblueprintvpcPrivateSubnet2RouteTableAssociationD5378F63": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "devblueprintvpcPrivateSubnet2RouteTableF6860A55"
    },
    "SubnetId": {
     "Ref": "devblueprintvpcPrivateSubnet2Subnet260858B5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "devblueprintvpcPrivateSubnet2DefaultRouteB7DAFEA6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "devblueprintvpcPrivateSubnet2RouteTableF6860A55"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "devblueprintvpcPublicSubnet2NATGateway357FD4F4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "devblueprintvpcPrivateSubnet3Subnet5BCF355A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    },
    "AvailabilityZone": "us-west-2c",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet3/Subnet"
   }
  },
  "devblueprintvpcPrivateSubnet3RouteTable35750E66": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet3/RouteTable"
   }
  },
  "devblueprintvpcPrivateSubnet3RouteTableAssociation60CAF9EE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "devblueprintvpcPrivateSubnet3RouteTable35750E66"
    },
    "SubnetId": {
     "Ref": "devblueprintvpcPrivateSubnet3Subnet5BCF355A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "devblueprintvpcPrivateSubnet3DefaultRouteC5BBD1FD": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "devblueprintvpcPrivateSubnet3RouteTable35750E66"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "devblueprintvpcPublicSubnet3NATGateway7FD4981B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/PrivateSubnet3/DefaultRoute"
   }
  },
  "devblueprintvpcIGW8CC1724C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/IGW"
   }
  },
  "devblueprintvpcVPCGW41D7F671": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    },
    "InternetGatewayId": {
     "Ref": "devblueprintvpcIGW8CC1724C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint-vpc/VPCGW"
   }
  },
  "devblueprintRole02402770": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "eks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSClusterPolicy"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "devblueprintvpcIGW8CC1724C",
    "devblueprintvpcPrivateSubnet1DefaultRouteD7281F01",
    "devblueprintvpcPrivateSubnet1RouteTable58E1DC0F",
    "devblueprintvpcPrivateSubnet1RouteTableAssociation7B079A13",
    "devblueprintvpcPrivateSubnet1Subnet87E8AFB4",
    "devblueprintvpcPrivateSubnet2DefaultRouteB7DAFEA6",
    "devblueprintvpcPrivateSubnet2RouteTableF6860A55",
    "devblueprintvpcPrivateSubnet2RouteTableAssociationD5378F63",
    "devblueprintvpcPrivateSubnet2Subnet260858B5",
    "devblueprintvpcPrivateSubnet3DefaultRouteC5BBD1FD",
    "devblueprintvpcPrivateSubnet3RouteTable35750E66",
    "devblueprintvpcPrivateSubnet3RouteTableAssociation60CAF9EE",
    "devblueprintvpcPrivateSubnet3Subnet5BCF355A",
    "devblueprintvpcPublicSubnet1DefaultRouteD3EE809D",
    "devblueprintvpcPublicSubnet1EIP660BDE5C",
    "devblueprintvpcPublicSubnet1NATGateway27A4838E",
    "devblueprintvpcPublicSubnet1RouteTableCD4DCFF6",
    "devblueprintvpcPublicSubnet1RouteTableAssociation1DE8BABD",
    "devblueprintvpcPublicSubnet1Subnet289CF21E",
    "devblueprintvpcPublicSubnet2DefaultRoute14B45FB4",
    "devblueprintvpcPublicSubnet2EIP4E6B0CF5",
    "devblueprintvpcPublicSubnet2NATGateway357FD4F4",
    "devblueprintvpcPublicSubnet2RouteTable1DA02E0D",
    "devblueprintvpcPublicSubnet2RouteTableAssociationBCFF690D",
    "devblueprintvpcPublicSubnet2Subnet6899B731",
    "devblueprintvpcPublicSubnet3DefaultRoute62EFDD3F",
    "devblueprintvpcPublicSubnet3EIP56A329E3",
    "devblueprintvpcPublicSubnet3NATGateway7FD4981B",
    "devblueprintvpcPublicSubnet3RouteTableC6FE1F2F",
    "devblueprintvpcPublicSubnet3RouteTableAssociation903D92F3",
    "devblueprintvpcPublicSubnet3Subnet953ED559",
    "devblueprintvpc747DC411",
    "devblueprintvpcVPCGW41D7F671"
   ],
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint/Role/Resource"
   }
  },
  "devblueprintControlPlaneSecurityGroup6D10D99F": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "EKS Control Plane Security Group",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "devblueprintvpc747DC411"
    }
   },
   "DependsOn": [
    "devblueprintvpcIGW8CC1724C",
    "devblueprintvpcPrivateSubnet1DefaultRouteD7281F01",
    "devblueprintvpcPrivateSubnet1RouteTable58E1DC0F",
    "devblueprintvpcPrivateSubnet1RouteTableAssociation7B079A13",
    "devblueprintvpcPrivateSubnet1Subnet87E8AFB4",
    "devblueprintvpcPrivateSubnet2DefaultRouteB7DAFEA6",
    "devblueprintvpcPrivateSubnet2RouteTableF6860A55",
    "devblueprintvpcPrivateSubnet2RouteTableAssociationD5378F63",
    "devblueprintvpcPrivateSubnet2Subnet260858B5",
    "devblueprintvpcPrivateSubnet3DefaultRouteC5BBD1FD",
    "devblueprintvpcPrivateSubnet3RouteTable35750E66",
    "devblueprintvpcPrivateSubnet3RouteTableAssociation60CAF9EE",
    "devblueprintvpcPrivateSubnet3Subnet5BCF355A",
    "devblueprintvpcPublicSubnet1DefaultRouteD3EE809D",
    "devblueprintvpcPublicSubnet1EIP660BDE5C",
    "devblueprintvpcPublicSubnet1NATGateway27A4838E",
    "devblueprintvpcPublicSubnet1RouteTableCD4DCFF6",
    "devblueprintvpcPublicSubnet1RouteTableAssociation1DE8BABD",
    "devblueprintvpcPublicSubnet1Subnet289CF21E",
    "devblueprintvpcPublicSubnet2DefaultRoute14B45FB4",
    "devblueprintvpcPublicSubnet2EIP4E6B0CF5",
    "devblueprintvpcPublicSubnet2NATGateway357FD4F4",
    "devblueprintvpcPublicSubnet2RouteTable1DA02E0D",
    "devblueprintvpcPublicSubnet2RouteTableAssociationBCFF690D",
    "devblueprintvpcPublicSubnet2Subnet6899B731",
    "devblueprintvpcPublicSubnet3DefaultRoute62EFDD3F",
    "devblueprintvpcPublicSubnet3EIP56A329E3",
    "devblueprintvpcPublicSubnet3NATGateway7FD4981B",
    "devblueprintvpcPublicSubnet3RouteTableC6FE1F2F",
    "devblueprintvpcPublicSubnet3RouteTableAssociation903D92F3",
    "devblueprintvpcPublicSubnet3Subnet953ED559",
    "devblueprintvpc747DC411",
    "devblueprintvpcVPCGW41D7F671"
   ],
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint/ControlPlaneSecurityGroup/Resource"
   }
  },
  "devblueprintCreationRole4B7B7FBC": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::966339691353:root"
          ]
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "DependsOn": [
    "devblueprintvpcIGW8CC1724C",
    "devblueprintvpcPrivateSubnet1DefaultRouteD7281F01",
    "devblueprintvpcPrivateSubnet1RouteTable58E1DC0F",
    "devblueprintvpcPrivateSubnet1RouteTableAssociation7B079A13",
    "devblueprintvpcPrivateSubnet1Subnet87E8AFB4",
    "devblueprintvpcPrivateSubnet2DefaultRouteB7DAFEA6",
    "devblueprintvpcPrivateSubnet2RouteTableF6860A55",
    "devblueprintvpcPrivateSubnet2RouteTableAssociationD5378F63",
    "devblueprintvpcPrivateSubnet2Subnet260858B5",
    "devblueprintvpcPrivateSubnet3DefaultRouteC5BBD1FD",
    "devblueprintvpcPrivateSubnet3RouteTable35750E66",
    "devblueprintvpcPrivateSubnet3RouteTableAssociation60CAF9EE",
    "devblueprintvpcPrivateSubnet3Subnet5BCF355A",
    "devblueprintvpcPublicSubnet1DefaultRouteD3EE809D",
    "devblueprintvpcPublicSubnet1EIP660BDE5C",
    "devblueprintvpcPublicSubnet1NATGateway27A4838E",
    "devblueprintvpcPublicSubnet1RouteTableCD4DCFF6",
    "devblueprintvpcPublicSubnet1RouteTableAssociation1DE8BABD",
    "devblueprintvpcPublicSubnet1Subnet289CF21E",
    "devblueprintvpcPublicSubnet2DefaultRoute14B45FB4",
    "devblueprintvpcPublicSubnet2EIP4E6B0CF5",
    "devblueprintvpcPublicSubnet2NATGateway357FD4F4",
    "devblueprintvpcPublicSubnet2RouteTable1DA02E0D",
    "devblueprintvpcPublicSubnet2RouteTableAssociationBCFF690D",
    "devblueprintvpcPublicSubnet2Subnet6899B731",
    "devblueprintvpcPublicSubnet3DefaultRoute62EFDD3F",
    "devblueprintvpcPublicSubnet3EIP56A329E3",
    "devblueprintvpcPublicSubnet3NATGateway7FD4981B",
    "devblueprintvpcPublicSubnet3RouteTableC6FE1F2F",
    "devblueprintvpcPublicSubnet3RouteTableAssociation903D92F3",
    "devblueprintvpcPublicSubnet3Subnet953ED559",
    "devblueprintvpc747DC411",
    "devblueprintvpcVPCGW41D7F671"
   ],
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint/Resource/CreationRole/Resource"
   }
  },
  "devblueprintCreationRoleDefaultPolicy50B7AB85": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "iam:PassRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "devblueprintRole02402770",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "eks:CreateCluster",
        "eks:CreateFargateProfile",
        "eks:DeleteCluster",
        "eks:DescribeCluster",
        "eks:DescribeUpdate",
        "eks:TagResource",
        "eks:UntagResource",
        "eks:UpdateClusterConfig",
        "eks:UpdateClusterVersion"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":eks:us-west-2:966339691353:cluster/dev-blueprint"
          ]
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":eks:us-west-2:966339691353:cluster/dev-blueprint/*"
          ]
         ]
        }
       ]
      },
      {
       "Action": [
        "eks:DeleteFargateProfile",
        "eks:DescribeFargateProfile"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":eks:us-west-2:966339691353:fargateprofile/dev-blueprint/*"
         ]
        ]
       }
      },
      {
       "Action": [
        "ec2:DescribeDhcpOptions",
        "ec2:DescribeInstances",
        "ec2:DescribeNetworkInterfaces",
        "ec2:DescribeRouteTables",
        "ec2:DescribeSecurityGroups",
        "ec2:DescribeSubnets",
        "ec2:DescribeVpcs",
        "iam:CreateServiceLinkedRole",
        "iam:GetRole",
        "iam:listAttachedRolePolicies"
       ],
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "devblueprintCreationRoleDefaultPolicy50B7AB85",
    "Roles": [
     {
      "Ref": "devblueprintCreationRole4B7B7FBC"
     }
    ]
   },
   "DependsOn": [
    "devblueprintvpcIGW8CC1724C",
    "devblueprintvpcPrivateSubnet1DefaultRouteD7281F01",
    "devblueprintvpcPrivateSubnet1RouteTable58E1DC0F",
    "devblueprintvpcPrivateSubnet1RouteTableAssociation7B079A13",
    "devblueprintvpcPrivateSubnet1Subnet87E8AFB4",
    "devblueprintvpcPrivateSubnet2DefaultRouteB7DAFEA6",
    "devblueprintvpcPrivateSubnet2RouteTableF6860A55",
    "devblueprintvpcPrivateSubnet2RouteTableAssociationD5378F63",
    "devblueprintvpcPrivateSubnet2Subnet260858B5",
    "devblueprintvpcPrivateSubnet3DefaultRouteC5BBD1FD",
    "devblueprintvpcPrivateSubnet3RouteTable35750E66",
    "devblueprintvpcPrivateSubnet3RouteTableAssociation60CAF9EE",
    "devblueprintvpcPrivateSubnet3Subnet5BCF355A",
    "devblueprintvpcPublicSubnet1DefaultRouteD3EE809D",
    "devblueprintvpcPublicSubnet1EIP660BDE5C",
    "devblueprintvpcPublicSubnet1NATGateway27A4838E",
    "devblueprintvpcPublicSubnet1RouteTableCD4DCFF6",
    "devblueprintvpcPublicSubnet1RouteTableAssociation1DE8BABD",
    "devblueprintvpcPublicSubnet1Subnet289CF21E",
    "devblueprintvpcPublicSubnet2DefaultRoute14B45FB4",
    "devblueprintvpcPublicSubnet2EIP4E6B0CF5",
    "devblueprintvpcPublicSubnet2NATGateway357FD4F4",
    "devblueprintvpcPublicSubnet2RouteTable1DA02E0D",
    "devblueprintvpcPublicSubnet2RouteTableAssociationBCFF690D",
    "devblueprintvpcPublicSubnet2Subnet6899B731",
    "devblueprintvpcPublicSubnet3DefaultRoute62EFDD3F",
    "devblueprintvpcPublicSubnet3EIP56A329E3",
    "devblueprintvpcPublicSubnet3NATGateway7FD4981B",
    "devblueprintvpcPublicSubnet3RouteTableC6FE1F2F",
    "devblueprintvpcPublicSubnet3RouteTableAssociation903D92F3",
    "devblueprintvpcPublicSubnet3Subnet953ED559",
    "devblueprintvpc747DC411",
    "devblueprintvpcVPCGW41D7F671"
   ],
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint/Resource/CreationRole/DefaultPolicy/Resource"
   }
  },
  "devblueprintA4E806F1": {
   "Type": "Custom::AWSCDK-EKS-Cluster",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
      "Outputs.pipelinestackdevdevblueprintawscdkawseksClusterResourceProviderframeworkonEvent9EE920E2Arn"
     ]
    },
    "Config": {
     "name": "dev-blueprint",
     "version": "1.21",
     "roleArn": {
      "Fn::GetAtt": [
       "devblueprintRole02402770",
       "Arn"
      ]
     },
     "resourcesVpcConfig": {
      "subnetIds": [
       {
        "Ref": "devblueprintvpcPublicSubnet1Subnet289CF21E"
       },
       {
        "Ref": "devblueprintvpcPublicSubnet2Subnet6899B731"
       },
       {
        "Ref": "devblueprintvpcPublicSubnet3Subnet953ED559"
       },
       {
        "Ref": "devblueprintvpcPrivateSubnet1Subnet87E8AFB4"
       },
       {
        "Ref": "devblueprintvpcPrivateSubnet2Subnet260858B5"
       },
       {
        "Ref": "devblueprintvpcPrivateSubnet3Subnet5BCF355A"
       }
      ],
      "securityGroupIds": [
       {
        "Fn::GetAtt": [
         "devblueprintControlPlaneSecurityGroup6D10D99F",
         "GroupId"
        ]
       }
      ],
      "endpointPublicAccess": true,
      "endpointPrivateAccess": true
     }
    },
    "AssumeRoleArn": {
     "Fn::GetAtt": [
      "devblueprintCreationRole4B7B7FBC",
      "Arn"
     ]
    },
    "AttributesRevision": 2
   },
   "DependsOn": [
    "devblueprintvpcIGW8CC1724C",
    "devblueprintvpcPrivateSubnet1DefaultRouteD7281F01",
    "devblueprintvpcPrivateSubnet1RouteTable58E1DC0F",
    "devblueprintvpcPrivateSubnet1RouteTableAssociation7B079A13",
    "devblueprintvpcPrivateSubnet1Subnet87E8AFB4",
    "devblueprintvpcPrivateSubnet2DefaultRouteB7DAFEA6",
    "devblueprintvpcPrivateSubnet2RouteTableF6860A55",
    "devblueprintvpcPrivateSubnet2RouteTableAssociationD5378F63",
    "devblueprintvpcPrivateSubnet2Subnet260858B5",
    "devblueprintvpcPrivateSubnet3DefaultRouteC5BBD1FD",
    "devblueprintvpcPrivateSubnet3RouteTable35750E66",
    "devblueprintvpcPrivateSubnet3RouteTableAssociation60CAF9EE",
    "devblueprintvpcPrivateSubnet3Subnet5BCF355A",
    "devblueprintvpcPublicSubnet1DefaultRouteD3EE809D",
    "devblueprintvpcPublicSubnet1EIP660BDE5C",
    "devblueprintvpcPublicSubnet1NATGateway27A4838E",
    "devblueprintvpcPublicSubnet1RouteTableCD4DCFF6",
    "devblueprintvpcPublicSubnet1RouteTableAssociation1DE8BABD",
    "devblueprintvpcPublicSubnet1Subnet289CF21E",
    "devblueprintvpcPublicSubnet2DefaultRoute14B45FB4",
    "devblueprintvpcPublicSubnet2EIP4E6B0CF5",
    "devblueprintvpcPublicSubnet2NATGateway357FD4F4",
    "devblueprintvpcPublicSubnet2RouteTable1DA02E0D",
    "devblueprintvpcPublicSubnet2RouteTableAssociationBCFF690D",
    "devblueprintvpcPublicSubnet2Subnet6899B731",
    "devblueprintvpcPublicSubnet3DefaultRoute62EFDD3F",
    "devblueprintvpcPublicSubnet3EIP56A329E3",
    "devblueprintvpcPublicSubnet3NATGateway7FD4981B",
    "devblueprintvpcPublicSubnet3RouteTableC6FE1F2F",
    "devblueprintvpcPublicSubnet3RouteTableAssociation903D92F3",
    "devblueprintvpcPublicSubnet3Subnet953ED559",
    "devblueprintvpc747DC411",
    "devblueprintvpcVPCGW41D7F671",
    "devblueprintCreationRoleDefaultPolicy50B7AB85",
    "devblueprintCreationRole4B7B7FBC"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint/Resource/Resource/Default"
   }
  },
  "devblueprintKubectlReadyBarrierB9176DD0": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Type": "String",
    "Value": "aws:cdk:eks:kubectl-ready"
   },
   "DependsOn": [
    "devblueprintvpcIGW8CC1724C",
    "devblueprintvpcPrivateSubnet1DefaultRouteD7281F01",
    "devblueprintvpcPrivateSubnet1RouteTable58E1DC0F",
    "devblueprintvpcPrivateSubnet1RouteTableAssociation7B079A13",
    "devblueprintvpcPrivateSubnet1Subnet87E8AFB4",
    "devblueprintvpcPrivateSubnet2DefaultRouteB7DAFEA6",
    "devblueprintvpcPrivateSubnet2RouteTableF6860A55",
    "devblueprintvpcPrivateSubnet2RouteTableAssociationD5378F63",
    "devblueprintvpcPrivateSubnet2Subnet260858B5",
    "devblueprintvpcPrivateSubnet3DefaultRouteC5BBD1FD",
    "devblueprintvpcPrivateSubnet3RouteTable35750E66",
    "devblueprintvpcPrivateSubnet3RouteTableAssociation60CAF9EE",
    "devblueprintvpcPrivateSubnet3Subnet5BCF355A",
    "devblueprintvpcPublicSubnet1DefaultRouteD3EE809D",
    "devblueprintvpcPublicSubnet1EIP660BDE5C",
    "devblueprintvpcPublicSubnet1NATGateway27A4838E",
    "devblueprintvpcPublicSubnet1RouteTableCD4DCFF6",
    "devblueprintvpcPublicSubnet1RouteTableAssociation1DE8BABD",
    "devblueprintvpcPublicSubnet1Subnet289CF21E",
    "devblueprintvpcPublicSubnet2DefaultRoute14B45FB4",
    "devblueprintvpcPublicSubnet2EIP4E6B0CF5",
    "devblueprintvpcPublicSubnet2NATGateway357FD4F4",
    "devblueprintvpcPublicSubnet2RouteTable1DA02E0D",
    "devblueprintvpcPublicSubnet2RouteTableAssociationBCFF690D",
    "devblueprintvpcPublicSubnet2Subnet6899B731",
    "devblueprintvpcPublicSubnet3DefaultRoute62EFDD3F",
    "devblueprintvpcPublicSubnet3EIP56A329E3",
    "devblueprintvpcPublicSubnet3NATGateway7FD4981B",
    "devblueprintvpcPublicSubnet3RouteTableC6FE1F2F",
    "devblueprintvpcPublicSubnet3RouteTableAssociation903D92F3",
    "devblueprintvpcPublicSubnet3Subnet953ED559",
    "devblueprintvpc747DC411",
    "devblueprintvpcVPCGW41D7F671",
    "devblueprintCreationRoleDefaultPolicy50B7AB85",
    "devblueprintCreationRole4B7B7FBC",
    "devblueprintA4E806F1"
   ],
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint/KubectlReadyBarrier"
   }
  },
  "devblueprintMastersRole2DDF8CFC": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::966339691353:root"
          ]
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "DependsOn": [
    "devblueprintvpcIGW8CC1724C",
    "devblueprintvpcPrivateSubnet1DefaultRouteD7281F01",
    "devblueprintvpcPrivateSubnet1RouteTable58E1DC0F",
    "devblueprintvpcPrivateSubnet1RouteTableAssociation7B079A13",
    "devblueprintvpcPrivateSubnet1Subnet87E8AFB4",
    "devblueprintvpcPrivateSubnet2DefaultRouteB7DAFEA6",
    "devblueprintvpcPrivateSubnet2RouteTableF6860A55",
    "devblueprintvpcPrivateSubnet2RouteTableAssociationD5378F63",
    "devblueprintvpcPrivateSubnet2Subnet260858B5",
    "devblueprintvpcPrivateSubnet3DefaultRouteC5BBD1FD",
    "devblueprintvpcPrivateSubnet3RouteTable35750E66",
    "devblueprintvpcPrivateSubnet3RouteTableAssociation60CAF9EE",
    "devblueprintvpcPrivateSubnet3Subnet5BCF355A",
    "devblueprintvpcPublicSubnet1DefaultRouteD3EE809D",
    "devblueprintvpcPublicSubnet1EIP660BDE5C",
    "devblueprintvpcPublicSubnet1NATGateway27A4838E",
    "devblueprintvpcPublicSubnet1RouteTableCD4DCFF6",
    "devblueprintvpcPublicSubnet1RouteTableAssociation1DE8BABD",
    "devblueprintvpcPublicSubnet1Subnet289CF21E",
    "devblueprintvpcPublicSubnet2DefaultRoute14B45FB4",
    "devblueprintvpcPublicSubnet2EIP4E6B0CF5",
    "devblueprintvpcPublicSubnet2NATGateway357FD4F4",
    "devblueprintvpcPublicSubnet2RouteTable1DA02E0D",
    "devblueprintvpcPublicSubnet2RouteTableAssociationBCFF690D",
    "devblueprintvpcPublicSubnet2Subnet6899B731",
    "devblueprintvpcPublicSubnet3DefaultRoute62EFDD3F",
    "devblueprintvpcPublicSubnet3EIP56A329E3",
    "devblueprintvpcPublicSubnet3NATGateway7FD4981B",
    "devblueprintvpcPublicSubnet3RouteTableC6FE1F2F",
    "devblueprintvpcPublicSubnet3RouteTableAssociation903D92F3",
    "devblueprintvpcPublicSubnet3Subnet953ED559",
    "devblueprintvpc747DC411",
    "devblueprintvpcVPCGW41D7F671"
   ],
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint/MastersRole/Resource"
   }
  },
  "devblueprintAwsAuthmanifestF568648C": {
   "Type": "Custom::AWSCDK-EKS-KubernetesResource",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
      "Outputs.pipelinestackdevdevblueprintawscdkawseksKubectlProviderframeworkonEvent1E80A673Arn"
     ]
    },
    "Manifest": {
     "Fn::Join": [
      "",
      [
       "[{\"apiVersion\":\"v1\",\"kind\":\"ConfigMap\",\"metadata\":{\"name\":\"aws-auth\",\"namespace\":\"kube-system\",\"labels\":{\"aws.cdk.eks/prune-c81525fcf8e3f4e16f0ef34d4f07778171bf40e2f6\":\"\"}},\"data\":{\"mapRoles\":\"[{\\\"rolearn\\\":\\\"",
       {
        "Fn::GetAtt": [
         "devblueprintMastersRole2DDF8CFC",
         "Arn"
        ]
       },
       "\\\",\\\"username\\\":\\\"",
       {
        "Fn::GetAtt": [
         "devblueprintMastersRole2DDF8CFC",
         "Arn"
        ]
       },
       "\\\",\\\"groups\\\":[\\\"system:masters\\\"]},{\\\"rolearn\\\":\\\"",
       {
        "Fn::GetAtt": [
         "devblueprintNodegroupdevblueprintngngNodeGroupRole0EDCE962",
         "Arn"
        ]
       },
       "\\\",\\\"username\\\":\\\"system:node:{{EC2PrivateDNSName}}\\\",\\\"groups\\\":[\\\"system:bootstrappers\\\",\\\"system:nodes\\\"]}]\",\"mapUsers\":\"[]\",\"mapAccounts\":\"[]\"}}]"
      ]
     ]
    },
    "ClusterName": {
     "Ref": "devblueprintA4E806F1"
    },
    "RoleArn": {
     "Fn::GetAtt": [
      "devblueprintCreationRole4B7B7FBC",
      "Arn"
     ]
    },
    "PruneLabel": "aws.cdk.eks/prune-c81525fcf8e3f4e16f0ef34d4f07778171bf40e2f6",
    "Overwrite": true
   },
   "DependsOn": [
    "devblueprintvpcIGW8CC1724C",
    "devblueprintvpcPrivateSubnet1DefaultRouteD7281F01",
    "devblueprintvpcPrivateSubnet1RouteTable58E1DC0F",
    "devblueprintvpcPrivateSubnet1RouteTableAssociation7B079A13",
    "devblueprintvpcPrivateSubnet1Subnet87E8AFB4",
    "devblueprintvpcPrivateSubnet2DefaultRouteB7DAFEA6",
    "devblueprintvpcPrivateSubnet2RouteTableF6860A55",
    "devblueprintvpcPrivateSubnet2RouteTableAssociationD5378F63",
    "devblueprintvpcPrivateSubnet2Subnet260858B5",
    "devblueprintvpcPrivateSubnet3DefaultRouteC5BBD1FD",
    "devblueprintvpcPrivateSubnet3RouteTable35750E66",
    "devblueprintvpcPrivateSubnet3RouteTableAssociation60CAF9EE",
    "devblueprintvpcPrivateSubnet3Subnet5BCF355A",
    "devblueprintvpcPublicSubnet1DefaultRouteD3EE809D",
    "devblueprintvpcPublicSubnet1EIP660BDE5C",
    "devblueprintvpcPublicSubnet1NATGateway27A4838E",
    "devblueprintvpcPublicSubnet1RouteTableCD4DCFF6",
    "devblueprintvpcPublicSubnet1RouteTableAssociation1DE8BABD",
    "devblueprintvpcPublicSubnet1Subnet289CF21E",
    "devblueprintvpcPublicSubnet2DefaultRoute14B45FB4",
    "devblueprintvpcPublicSubnet2EIP4E6B0CF5",
    "devblueprintvpcPublicSubnet2NATGateway357FD4F4",
    "devblueprintvpcPublicSubnet2RouteTable1DA02E0D",
    "devblueprintvpcPublicSubnet2RouteTableAssociationBCFF690D",
    "devblueprintvpcPublicSubnet2Subnet6899B731",
    "devblueprintvpcPublicSubnet3DefaultRoute62EFDD3F",
    "devblueprintvpcPublicSubnet3EIP56A329E3",
    "devblueprintvpcPublicSubnet3NATGateway7FD4981B",
    "devblueprintvpcPublicSubnet3RouteTableC6FE1F2F",
    "devblueprintvpcPublicSubnet3RouteTableAssociation903D92F3",
    "devblueprintvpcPublicSubnet3Subnet953ED559",
    "devblueprintvpc747DC411",
    "devblueprintvpcVPCGW41D7F671",
    "devblueprintKubectlReadyBarrierB9176DD0"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint/AwsAuth/manifest/Resource/Default"
   }
  },
  "devblueprintNodegroupdevblueprintngngNodeGroupRole0EDCE962": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSWorkerNodePolicy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKS_CNI_Policy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "devblueprintvpcIGW8CC1724C",
    "devblueprintvpcPrivateSubnet1DefaultRouteD7281F01",
    "devblueprintvpcPrivateSubnet1RouteTable58E1DC0F",
    "devblueprintvpcPrivateSubnet1RouteTableAssociation7B079A13",
    "devblueprintvpcPrivateSubnet1Subnet87E8AFB4",
    "devblueprintvpcPrivateSubnet2DefaultRouteB7DAFEA6",
    "devblueprintvpcPrivateSubnet2RouteTableF6860A55",
    "devblueprintvpcPrivateSubnet2RouteTableAssociationD5378F63",
    "devblueprintvpcPrivateSubnet2Subnet260858B5",
    "devblueprintvpcPrivateSubnet3DefaultRouteC5BBD1FD",
    "devblueprintvpcPrivateSubnet3RouteTable35750E66",
    "devblueprintvpcPrivateSubnet3RouteTableAssociation60CAF9EE",
    "devblueprintvpcPrivateSubnet3Subnet5BCF355A",
    "devblueprintvpcPublicSubnet1DefaultRouteD3EE809D",
    "devblueprintvpcPublicSubnet1EIP660BDE5C",
    "devblueprintvpcPublicSubnet1NATGateway27A4838E",
    "devblueprintvpcPublicSubnet1RouteTableCD4DCFF6",
    "devblueprintvpcPublicSubnet1RouteTableAssociation1DE8BABD",
    "devblueprintvpcPublicSubnet1Subnet289CF21E",
    "devblueprintvpcPublicSubnet2DefaultRoute14B45FB4",
    "devblueprintvpcPublicSubnet2EIP4E6B0CF5",
    "devblueprintvpcPublicSubnet2NATGateway357FD4F4",
    "devblueprintvpcPublicSubnet2RouteTable1DA02E0D",
    "devblueprintvpcPublicSubnet2RouteTableAssociationBCFF690D",
    "devblueprintvpcPublicSubnet2Subnet6899B731",
    "devblueprintvpcPublicSubnet3DefaultRoute62EFDD3F",
    "devblueprintvpcPublicSubnet3EIP56A329E3",
    "devblueprintvpcPublicSubnet3NATGateway7FD4981B",
    "devblueprintvpcPublicSubnet3RouteTableC6FE1F2F",
    "devblueprintvpcPublicSubnet3RouteTableAssociation903D92F3",
    "devblueprintvpcPublicSubnet3Subnet953ED559",
    "devblueprintvpc747DC411",
    "devblueprintvpcVPCGW41D7F671"
   ],
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint/Nodegroupdev-blueprint-ng-ng/NodeGroupRole/Resource"
   }
  },
  "devblueprintNodegroupdevblueprintngngAC42F0BF": {
   "Type": "AWS::EKS::Nodegroup",
   "Properties": {
    "ClusterName": {
     "Ref": "devblueprintA4E806F1"
    },
    "NodeRole": {
     "Fn::GetAtt": [
      "devblueprintNodegroupdevblueprintngngNodeGroupRole0EDCE962",
      "Arn"
     ]
    },
    "Subnets": [
     {
      "Ref": "devblueprintvpcPrivateSubnet1Subnet87E8AFB4"
     },
     {
      "Ref": "devblueprintvpcPrivateSubnet2Subnet260858B5"
     },
     {
      "Ref": "devblueprintvpcPrivateSubnet3Subnet5BCF355A"
     }
    ],
    "AmiType": "AL2_x86_64",
    "ForceUpdateEnabled": true,
    "InstanceTypes": [
     "m5.large"
    ],
    "NodegroupName": "dev-blueprint-ng",
    "ScalingConfig": {
     "DesiredSize": 1,
     "MaxSize": 3,
     "MinSize": 1
    }
   },
   "DependsOn": [
    "devblueprintvpcIGW8CC1724C",
    "devblueprintvpcPrivateSubnet1DefaultRouteD7281F01",
    "devblueprintvpcPrivateSubnet1RouteTable58E1DC0F",
    "devblueprintvpcPrivateSubnet1RouteTableAssociation7B079A13",
    "devblueprintvpcPrivateSubnet1Subnet87E8AFB4",
    "devblueprintvpcPrivateSubnet2DefaultRouteB7DAFEA6",
    "devblueprintvpcPrivateSubnet2RouteTableF6860A55",
    "devblueprintvpcPrivateSubnet2RouteTableAssociationD5378F63",
    "devblueprintvpcPrivateSubnet2Subnet260858B5",
    "devblueprintvpcPrivateSubnet3DefaultRouteC5BBD1FD",
    "devblueprintvpcPrivateSubnet3RouteTable35750E66",
    "devblueprintvpcPrivateSubnet3RouteTableAssociation60CAF9EE",
    "devblueprintvpcPrivateSubnet3Subnet5BCF355A",
    "devblueprintvpcPublicSubnet1DefaultRouteD3EE809D",
    "devblueprintvpcPublicSubnet1EIP660BDE5C",
    "devblueprintvpcPublicSubnet1NATGateway27A4838E",
    "devblueprintvpcPublicSubnet1RouteTableCD4DCFF6",
    "devblueprintvpcPublicSubnet1RouteTableAssociation1DE8BABD",
    "devblueprintvpcPublicSubnet1Subnet289CF21E",
    "devblueprintvpcPublicSubnet2DefaultRoute14B45FB4",
    "devblueprintvpcPublicSubnet2EIP4E6B0CF5",
    "devblueprintvpcPublicSubnet2NATGateway357FD4F4",
    "devblueprintvpcPublicSubnet2RouteTable1DA02E0D",
    "devblueprintvpcPublicSubnet2RouteTableAssociationBCFF690D",
    "devblueprintvpcPublicSubnet2Subnet6899B731",
    "devblueprintvpcPublicSubnet3DefaultRoute62EFDD3F",
    "devblueprintvpcPublicSubnet3EIP56A329E3",
    "devblueprintvpcPublicSubnet3NATGateway7FD4981B",
    "devblueprintvpcPublicSubnet3RouteTableC6FE1F2F",
    "devblueprintvpcPublicSubnet3RouteTableAssociation903D92F3",
    "devblueprintvpcPublicSubnet3Subnet953ED559",
    "devblueprintvpc747DC411",
    "devblueprintvpcVPCGW41D7F671"
   ],
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/dev-blueprint/Nodegroupdev-blueprint-ng-ng/Resource"
   }
  },
  "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.us-west-2.",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/cdk-hnb659fds-assets-966339691353-us-west-2/6f68a0be8d7ff6423cd136aa13cc2250b8487c464f4a0895016a2ee5d8a761b7.json"
      ]
     ]
    },
    "Parameters": {
     "referencetopipelinestackdevdevblueprintCreationRole553C2DB0Arn": {
      "Fn::GetAtt": [
       "devblueprintCreationRole4B7B7FBC",
       "Arn"
      ]
     }
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/@aws-cdk--aws-eks.ClusterResourceProvider.NestedStack/@aws-cdk--aws-eks.ClusterResourceProvider.NestedStackResource",
    "aws:asset:path": "pipelinestackdevdevblueprintawscdkawseksClusterResourceProvider11555029.nested.template.json",
    "aws:asset:property": "TemplateURL"
   }
  },
  "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.us-west-2.",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/cdk-hnb659fds-assets-966339691353-us-west-2/07b7e4416a597a02d7ce297d35c6f68f69360b35797a09c06fa0e29ab2c1d123.json"
      ]
     ]
    },
    "Parameters": {
     "referencetopipelinestackdevdevblueprint267B112FArn": {
      "Fn::GetAtt": [
       "devblueprintA4E806F1",
       "Arn"
      ]
     },
     "referencetopipelinestackdevdevblueprintCreationRole553C2DB0Arn": {
      "Fn::GetAtt": [
       "devblueprintCreationRole4B7B7FBC",
       "Arn"
      ]
     },
     "referencetopipelinestackdevdevblueprintdevblueprintvpcPrivateSubnet1Subnet3D6CCD09Ref": {
      "Ref": "devblueprintvpcPrivateSubnet1Subnet87E8AFB4"
     },
     "referencetopipelinestackdevdevblueprintdevblueprintvpcPrivateSubnet2Subnet956CFF52Ref": {
      "Ref": "devblueprintvpcPrivateSubnet2Subnet260858B5"
     },
     "referencetopipelinestackdevdevblueprintdevblueprintvpcPrivateSubnet3Subnet3534F620Ref": {
      "Ref": "devblueprintvpcPrivateSubnet3Subnet5BCF355A"
     },
     "referencetopipelinestackdevdevblueprint267B112FClusterSecurityGroupId": {
      "Fn::GetAtt": [
       "devblueprintA4E806F1",
       "ClusterSecurityGroupId"
      ]
     }
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/@aws-cdk--aws-eks.KubectlProvider.NestedStack/@aws-cdk--aws-eks.KubectlProvider.NestedStackResource",
    "aws:asset:path": "pipelinestackdevdevblueprintawscdkawseksKubectlProvider66F75746.nested.template.json",
    "aws:asset:property": "TemplateURL"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/01Q32+CMBD+W3w/uumS+UzIYswyR2DxdSn11Aq0pL2TGML/vgJTfPp+5Prd11uJt7VYLmTrI3Uoo0oXostJqhKC9duhWolu3yhIjmafJpByUWmVc2GQBm9mmWXCH1lUOPuzF3tvlZakrXkMD+Rjmw6wk7SRhK28Qer0NdA5eGsIXeD3ganJv4opdD3XaAhyVOw03TbOcjN2eDZ6wNKLLqnYhziIWx8zneGTizEc/Zc0+oieYGcPeLpnPEQPWtaiy+z0vxFTG24xFppY30OG3rJTYSbssfUsw5Mn/s3U8HTA4dY9mLBHXPzLdfkulmvxurh4rSPHhnSNIpvwD6DP+66sAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "pipeline-stack/dev/dev-blueprint/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "devblueprintClusterNameC2557A04": {
   "Value": {
    "Ref": "devblueprintA4E806F1"
   }
  },
  "devblueprintConfigCommand24FB2D8A": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "aws eks update-kubeconfig --name ",
      {
       "Ref": "devblueprintA4E806F1"
      },
      " --region us-west-2 --role-arn ",
      {
       "Fn::GetAtt": [
        "devblueprintMastersRole2DDF8CFC",
        "Arn"
       ]
      }
     ]
    ]
   }
  },
  "devblueprintGetTokenCommand94C808F5": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "aws eks get-token --cluster-name ",
      {
       "Ref": "devblueprintA4E806F1"
      },
      " --region us-west-2 --role-arn ",
      {
       "Fn::GetAtt": [
        "devblueprintMastersRole2DDF8CFC",
        "Arn"
       ]
      }
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
